Fixed styles for the reply form and removed conditional visibility

--- a/styles/messages.scss
+++ b/styles/messages.scss
@@ -123,7 +123,36 @@ input {
 
 #chat-container {
   margin-top: 75px;
+  margin-bottom: 40px;
+}
+
+#reply-form {
   margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+}
+
+#response-message {
+  padding: 10px 20px;
+  margin-right: 15px;
+  border-color: #45a049;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  width: 25%;
+}
+
+#response-message:hover {
+  background-color: #2E2E2E;
+  color: white;
+}
+
+#reply-button {
+  padding: 10px 20px;
+  background-color: #4CAF50; /* Choose a color that fits your design */
+  color: white;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s;
 }
 
 footer {
